Update fade class to ensure visibility
remove mixin use direct styles

--- a/src/plugins/data-inview/_noscript.scss
+++ b/src/plugins/data-inview/_noscript.scss
@@ -5,6 +5,7 @@
 
 .fade {
   &.out {
-    @include visible;
-  }
+	  opacity: 1;
+	  visibility: visible;
+	}
 }
